syntax = "proto3";
package abag.quasarnode.osmolpv;

option go_package = "github.com/abag/quasarnode/x/osmolpv/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 
import "google/protobuf/timestamp.proto";

// RewardCollection is used to do the book keeping of the reward
// collected from the osmosis on a given epochday. This is further used for the approx distribution.
message RewardCollection {
   google.protobuf.Timestamp timeCollected = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"startTime\""
  ];
  repeated cosmos.base.v1beta1.Coin coins = 2
  [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
 
  
}
